--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.10"
 feedparser = "^6.0.10"
 flask = "^2.3.3"
+sqlalchemy = "^2.0.21"
+psycopg2 = "^2.9.9"
+termcolor = "^2.3.0"
 
 [build-system]
 requires = ["poetry-core"]
