--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 feedparser = "^6.0.10"
 flask = "^2.3.3"
 sqlalchemy = "^2.0.22"
+psycopg2 = "^2.9.9"
 
 [build-system]
 requires = ["poetry-core"]
