--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ feedparser = "^6.0.10"
 flask = "^2.3.3"
 sqlalchemy = "^2.0.22"
 psycopg2 = "^2.9.9"
+python-dotenv = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
