--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ flask = "^2.3.3"
 sqlalchemy = "^2.0.22"
 psycopg2 = "^2.9.9"
 python-dotenv = "^1.0.0"
+requests = "^2.31.0"
 
 [build-system]
 requires = ["poetry-core"]
